welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type Yellow
def faireV(c: Yellow) {
              ^